# auto-eda-crew

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/: app_logic.py  crew_runner.py  main.py
src/agent/: agents.py
src/config/: __init__.py  crewai_storage.py  settings.py
src/prompts/: __init__.py  eda_system.py  ml_system.py  orchestrator_system.py
src/tools/: tasks.py
