[project]
name = "crewai-groq-research"
version = "0.1.0"
description = "A CrewAI multi-agent system powered by Groq."
authors = [{ name = "Karan" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm]>=0.175.0",
    "crewai-tools>=0.33.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.0.1",
    "streamlit>=1.40.0",
    "tavily-python>=0.7.23",
]

[project.scripts]
run_crew = "src.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.crewai]
type = "crew"
